--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "dev": "webpack --config webpack/webpack.config.js -p",
     "build": "rimraf dist && webpack --config webpack/webpack.config.js -p",
-    "start": "webpack-dev-server --config webpack/webpack.config.js -p"
+    "start": "webpack-dev-server --config webpack/webpack.config.js"
   },
   "author": "Harold Pedraza",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "handlebars": "^4.7.6",
@@ -26,11 +31,5 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^8.1.0"
   }
 }
